--- a/nonfiction.html
+++ b/nonfiction.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
 
-            <!-- Author: Brendan Dileo, 000879513 -->
+            <!-- Author: Brendan Dileo -->
 
         <title> Non-fiction Books Web page </title>
         <link rel="stylesheet" href="css/externalcss2.css">
