--- a/nonfiction.html
+++ b/nonfiction.html
@@ -24,8 +24,8 @@
         <footer>
             <p><strong>Book Club Organizer</strong></p>
             <p>Brendan Dileo 
-                <a href="mailto:brendan.dileo@mohawkcollege.ca"> 
-                    brendan.dileo@mohawkcollege.ca </a>
+                <a href="mailto:example@example.ca"> 
+                    example@example.ca </a>
             </p>
     
             <p>Mobile:
