--- a/bookclub.html
+++ b/bookclub.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
 
-            <!-- Author: Brendan Dileo, 000879513 -->
+            <!-- Author: Brendan Dileo -->
         
         <title>Brendan's Book Club Reading List</title>
         <link rel="stylesheet" href="css/externalcss.css">
